2002-09-06  Dominik Vogt  <dominik.vogt@gmx.de>

	* acinclude.m4:
	autoconf-2.53 fix

2002-09-05  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/stack.c (RaiseOrLowerWindow):
	(__restack_window):
	(mark_transient_subtree):
	(must_move_transients):
	(is_on_top_of_layer_ignore_rom):
	handle restacking trees of transient windows; still does not work too
	well if a window has multiple transients at the same time

	* fvwm/stack.c (restack_windows):
	(new_layer):
	(__restack_window):
	fixed flickering when overlapping transients are lowered

	* fvwm/stack.c (RaiseOrLowerWindow):
	fixed StackTransientParent style without RaiseTransient or
	LowerTransient on transient_for window
	StackTransientParent works only on window in the same layer
	(mark_transient_subtree):
	fixed handling of window group hint w/ iconify

	* fvwm/bindings.c (activate_binding):
	fixed key bindings on window corners

	* libs/fvwmlib.h (C_DECOR):
	context for all window decorations

2002-09-05  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	FvwmTaskBar news

2002-09-03  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (paint_menu):
	fixed a minor drawing problem with menu item reliefs

2002-08-25  Dominik Vogt  <dominik.vogt@gmx.de>

	* ChangeLog:
	cleaned up

2002-08-29  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (paint_menu):
	fixed drawing of SidePic menu background when not using SideColor

2002-08-13  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/menus.c (select_menu_item):
	(paint_menu):
	fixed a redrawing problem with H/Vgradient menu faces
	(MenuInteraction):
	fixed a minor problem w/ entering submenus via keyboard

2002-08-12  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/move_resize.c (CMD_ResizeMove):
	(CMD_Resize):
	(CMD_Maximize):
	commands can be used on iconified windows again

2002-08-11  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	increased version to 2.4.10

	* NEWS:
	* fvwm/fvwm2.1:
	updated for 2.4.9

	* fvwm/bindings.c (update_nr_buttons):
	(ParseBinding):