@@ -1,7 +1,8 @@
 2002-09-06  Dominik Vogt  <dominik.vogt@gmx.de>
 
+	* configure.in:
 	* acinclude.m4:
-	autoconf-2.53 fix
+	autoconf-2.53 fixes
 
 2002-09-05  Dominik Vogt  <dominik.vogt@gmx.de>
 
